# yourSQLfriend

./: .gitignore  CHANGELOG.txt  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  PROJECT_OVERVIEW.md  README.md  SQL_GENERATION_FIXES.md  app.py  ascii.txt  build_linux.sh  build_windows.bat  humming-juggling-cake.md  initial-prompt.md  install.ps1  install.sh  main.py  pyproject.toml  refinements.md  requirements.txt  run.bat  run.sh  yourSQLfriend.spec
.github/workflows/: publish.yml
src/yoursqlfriend/: __init__.py  app.py  database.py  llm.py  validation.py
src/yoursqlfriend/static/: manifest.json  service-worker.js  style.css
src/yoursqlfriend/static/js/: app.js  chat.js  erdiagram.js  inspector.js  notes.js  providers.js  search.js  sql.js  state.js  ui.js  upload.js
src/yoursqlfriend/templates/: index.html
static/: script.js  service-worker.js  style.css
static/js/: app.js  charts.js  chat.js  erdiagram.js  notes.js  search.js  sql.js  state.js  ui.js  upload.js
templates/: index.html
tests/: test_llm.py  test_routes.py  test_validate_sql.py
