[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoursqlfriend"
version = "3.8.2"
description = "SQLite forensic analysis with local LLMs — ask questions in plain English"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Reisset", url = "https://github.com/reisset"}
]
keywords = ["sqlite", "forensics", "llm", "sql", "analysis", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "flask>=3.0",
    "pandas>=2.0",
    "requests>=2.28",
    "flask-session>=0.5",
]

[project.urls]
Homepage = "https://github.com/reisset/yourSQLfriend"
Repository = "https://github.com/reisset/yourSQLfriend"
Issues = "https://github.com/reisset/yourSQLfriend/issues"
Changelog = "https://github.com/reisset/yourSQLfriend/blob/main/CHANGELOG.txt"

[project.scripts]
yoursqlfriend = "yoursqlfriend:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/yoursqlfriend/**",
    "LICENSE",
    "NOTICE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yoursqlfriend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
